* Fri Sep 13 2024 Steven Pritchard <steve@sicura.us> - 6.9.0
- [puppetsync] Update module dependencies to support simp-iptables 7.x

* Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 6.8.0
- [puppetsync] Add EL9 support

* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 6.7.0
- [puppetsync] Updates for Puppet 8
  - These updates may include the following:
    - Update Gemfile
    - Add support for Puppet 8
    - Drop support for Puppet 6
    - Update module dependencies

* Thu Sep 07 2023 Steven Pritchard <steve@sicura.us> - 6.6.0
- Add AlmaLinux 8 support

* Tue Aug 29 2023 Steven Pritchard <steve@sicura.us> - 6.5.0
- Support for Puppet 8 and stdlib 9
- Drop use of Stdlib::Compat::Integer type
- Drop use of deprecated top-level facts
- Update gem dependencies
- Drop support for Puppet 6

* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.4.0
- Add RockyLinux 8 support

* Sun Jul 17 2022 Trevor Vaughan <trevor@sicura.us> - 6.3.1
- Support Amazon Linux 2

* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.3.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Wed Feb 03 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 6.2.1
- Expanded simp/rsyslog dependendency range to < 9.0.0.

* Fri Dec 18 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.2.1
- Removed EL6 support

* Tue Dec 10 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.2.0-0
- Add EL8 support
- Updated README.md
- Added REFERENCE.md
- Made use of rsync optional (enabled by default for backwards compatibility)
- Add support for passing in a full dhcpd.conf entry
- Ensure that the SELinux user and type are set for the configuration files
- Switch to using iptables::listen::udp for firewalld compatibility
- Add acceptance test

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.2.0-0
- Drop Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support
