@@ -1,6 +1,6 @@
 {
   "name": "simp-dhcp",
-  "version": "6.9.0",
+  "version": "7.0.0",
   "author": "SIMP Team",
   "summary": "A Puppet module to automate configuration of DHCP",
   "license": "Apache-2.0",
@@ -47,8 +47,6 @@
     {
       "operatingsystem": "CentOS",
       "operatingsystemrelease": [
-        "8",
-        "7",
         "9"
       ]
     },
@@ -56,7 +54,6 @@
       "operatingsystem": "RedHat",
       "operatingsystemrelease": [
         "8",
-        "7",
         "9"
       ]
     },
@@ -64,7 +61,6 @@
       "operatingsystem": "OracleLinux",
       "operatingsystemrelease": [
         "8",
-        "7",
         "9"
       ]
     },
