@@ -1,10 +1,10 @@
 ---
 HOSTS:
-  el9:
-    platform: el-9-x86_64
-    box: generic/rocky9
+  el8:
+    platform: el-8-x86_64
+    box: generic/alma8
     hypervisor: "<%= ENV.fetch('BEAKER_HYPERVISOR', 'vagrant') %>"
-    family: rocky-linux-cloud/rocky-linux-9
+    family: almalinux-cloud/almalinux-8
     gce_machine_type: n1-standard-2
 CONFIG:
   log_level: verbose
