@@ -1,17 +1,6 @@
 ---
 HOSTS:
-  oel7:
-    roles:
-    - server-el7
-    - default
-    platform: el-7-x86_64
-    box: generic/oracle7
-    hypervisor: "<%= ENV.fetch('BEAKER_HYPERVISOR', 'vagrant') %>"
-    family: sicura-image-build/oracle-linux-7
-    gce_machine_type: n1-standard-2
   oel8:
-    roles:
-    - server-el8
     platform: el-8-x86_64
     box: generic/oracle8
     hypervisor: "<%= ENV.fetch('BEAKER_HYPERVISOR', 'vagrant') %>"
@@ -19,6 +8,7 @@ HOSTS:
     gce_machine_type: n1-standard-2
 CONFIG:
   log_level: verbose
-  type: aio
   synced_folder: disabled
+  type: aio
+  vagrant_memsize: 256
   puppet_collection: "<%= ENV.fetch('BEAKER_PUPPET_COLLECTION', 'puppet8') %>"
